# basil-gb

./: .gitignore  .gitmodules
rtl/: bus.sv  console.sv  gameboy.sv
rtl/cart/: cart.sv
rtl/cpu/: cpu.sv  cpu_alu.sv  cpu_bus_controller.sv  cpu_clock.sv  cpu_control.sv  cpu_regfile.sv  cpu_types.sv
rtl/gameboy/: gameboy.sv
rtl/gameboy/cpu/: cpu.sv  cpu_control.sv  cpu_idu.sv  cpu_types.sv
rtl/gameboy/io/: joypad.sv  serial.sv
rtl/gameboy/mem/: mem_boot_rom.sv  mem_hram.sv  mem_types.sv  mem_vram.sv  mmu.sv
rtl/gameboy/ppu/: ppu.sv  ppu_bg_win_fetcher.sv  ppu_shifter.sv  ppu_state.sv  ppu_types.sv
rtl/io/: serial.sv
rtl/mem/: mem_hram.sv  mem_types.sv  mem_vram.sv  mem_wram.sv  mmu.sv
rtl/ppu/: ppu.sv  ppu_bg_fetcher.sv  ppu_fifo.sv  ppu_shifter.sv  ppu_types.sv
rtl/timer/: timer.sv
rtl/util/: edge_detect.sv
sim/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  colors.h  main.cpp
src/debug/: debug_ui.cpp  debug_ui.h
src/sim/: sim.cpp  sim.h
src/testing/: runner.cpp  runner.h
src/testing/suites/: blargg.h  mooneye.h  test_suite.h
